feature/preEntrega2 correccion de errores y adaptacion online via github pages

--- a/pages/informacion_de_contacto.html
+++ b/pages/informacion_de_contacto.html
@@ -37,11 +37,11 @@
             <p> REDES SOCIALES: 
                 <section class="TIPOS_DE_CONTACTOS">
                     <a href="../pages/404.html">
-                        <img src="/assets/img/facebook.svg" alt="logo_de_red_social_facebook" />
+                        <img src="./assets/img/facebook.svg" alt="logo_de_red_social_facebook" />
                     <a href="../pages/404.html">
-                        <img src="/assets/img/twitter.svg" alt="logo_de_red_social_twitter" />
+                        <img src="./assets/img/twitter.svg" alt="logo_de_red_social_twitter" />
                     <a href="../pages/404.html">
-                        <img src="/assets/img/whatsapp.svg" alt="logo_de_red_social_whatsapp" />
+                        <img src="./assets/img/whatsapp.svg" alt="logo_de_red_social_whatsapp" />
             </p>
            <h2>Cual es nuestro sitio de trabajo?</h2>
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1652093.4870695416!2d139.63801375!3d36.0265177!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6018b60012220e6f%3A0x69d63b267e399f89!2zUmVnacOzbiBkZSBLYW50xY0sIEphcMOzbg!5e0!3m2!1ses!2sar!4v1707800063030!5m2!1ses!2sar" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
@@ -56,7 +56,7 @@
                     <div class="col-md-6">
                         <h3>Necesitas ayuda? Contacta al Soporte Electrico!!</h3>
                         <a href="../pages/sobre_nosotros.html" class="rayologo">
-                            <img src="/assets/img/system-regular-117-bolt (1).gif" alt="logo_de_rayo_en_movimiento" />
+                            <img src="./assets/img/system-regular-117-bolt (1).gif" alt="logo_de_rayo_en_movimiento" />
                         </a>
                         <div>
                             <p>correo: Mj7pikastore1111@gmailpkatv.com.ar</p>
@@ -68,12 +68,12 @@
                     <div class="col-md-6">
                         <h4>NUESTRAS REDES SOCIALES TIPO ELECTRICO!</h4>
                         <ul class="redes">
-                            <li><a href="../pages/404.html" class="facebook"><img src="/assets/img/facebook.svg" alt="logo_de_red_social_facebook" /></a></li>
-                            <li><a href="../pages/404.html" class="twitter"><img src="/assets/img/twitter.svg" alt="logo_de_red_social_twitter" /></a></li>
-                            <li><a href="../pages/404.html" class="whatsapp"><img src="/assets/img/whatsapp.svg" alt="logo_de_red_social_whatsapp" /></a></li>
+                            <li><a href="../pages/404.html" class="facebook"><img src="./assets/img/facebook.svg" alt="logo_de_red_social_facebook" /></a></li>
+                            <li><a href="../pages/404.html" class="twitter"><img src="./assets/img/twitter.svg" alt="logo_de_red_social_twitter" /></a></li>
+                            <li><a href="../pages/404.html" class="whatsapp"><img src="./assets/img/whatsapp.svg" alt="logo_de_red_social_whatsapp" /></a></li>
                         </ul>
                         <ul class="menu-footer">
-                            <li><a href="#" class="logo"><img src="/assets/favicon.ico" alt="logo_de_la_pagina" /></a></li>
+                            <li><a href="#" class="logo"><img src="./assets/favicon.ico" alt="logo_de_la_pagina" /></a></li>
                             <li><a href="../index.html" class="selected">Inicio</a></li>
                             <li><a href="../pages/tienda.html">Tienda</a></li>
                             <li><a href="../pages/sobre_nosotros.html">Sobre Nosotros</a></li>
