--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -41,29 +41,29 @@
         <div class="row">
             <div class="col-md-4">
                 <a href="../pages/404.html">
-                    <img src="/assets/img/gorra_pikachu.webp" alt="gorra_con_tematica_de_pikachu" class="custom-img"/>
+                    <img src="./assets/img/gorra_pikachu.webp" alt="gorra_con_tematica_de_pikachu" class="custom-img"/>
                 </a>
             </div>
             <div class="col-md-4">
                 <a href="../pages/404.html">
-                    <img src="/assets/img/remera_pikachu.webp" alt="remera_con_tematica_de_pikachu" class="custom-img"/>
+                    <img src="./assets/img/remera_pikachu.webp" alt="remera_con_tematica_de_pikachu" class="custom-img"/>
                 </a>
             </div>
             <div class="col-md-4">
                 <a href="../pages/404.html">
-                    <img src="/assets/img/zapatillas_pikachu.webp" alt="zapatillas_con_tematica_de_pikachu" class="custom-img"/>
+                    <img src="./assets/img/zapatillas_pikachu.webp" alt="zapatillas_con_tematica_de_pikachu" class="custom-img"/>
                 </a>
             </div>
         </div>
         <div class="row">
             <div class="col-md-4">
                 <a href="../pages/404.html">
-                    <img src="/assets/img/remera_raichu.webp" alt="remera_con_tematica_de_raichu" class="custom-img"/>
+                    <img src="./assets/img/remera_raichu.webp" alt="remera_con_tematica_de_raichu" class="custom-img"/>
                 </a>
             </div>
             <div class="col-md-4 padmod">
                 <a href="../pages/404.html">
-                    <img src="/assets/img/remera_linea_evolutiva_pichu.png" alt="remera_con_tematica_de_linea_evolutiva_de_pichu" class="custom-img"/>
+                    <img src="./assets/img/remera_linea_evolutiva_pichu.png" alt="remera_con_tematica_de_linea_evolutiva_de_pichu" class="custom-img"/>
                 </a>
             </div>
         </div>
@@ -81,7 +81,7 @@
                     <div class="col-md-6">
                         <h3>Necesitas ayuda? Contacta al Soporte Electrico!!</h3>
                         <a href="../pages/sobre_nosotros.html" class="rayologo link-rojo">
-                            <img src="/assets/img/system-regular-117-bolt (1).gif" alt="logo_de_rayo_en_movimiento" />
+                            <img src="./assets/img/system-regular-117-bolt (1).gif" alt="logo_de_rayo_en_movimiento" />
                         </a>
                         <div>
                             <p>correo: Mj7pikastore1111@gmailpkatv.com.ar</p>
@@ -93,12 +93,12 @@
                     <div class="col-md-6">
                         <h4>NUESTRAS REDES SOCIALES TIPO ELECTRICO!</h4>
                         <ul class="redes">
-                            <li><a href="../pages/404.html" class="facebook"><img src="/assets/img/facebook.svg" alt="logo_de_red_social_facebook" /></a></li>
-                            <li><a href="../pages/404.html" class="twitter"><img src="/assets/img/twitter.svg" alt="logo_de_red_social_twitter" /></a></li>
-                            <li><a href="../pages/404.html" class="whatsapp"><img src="/assets/img/whatsapp.svg" alt="logo_de_red_social_whatsapp" /></a></li>
+                            <li><a href="../pages/404.html" class="facebook"><img src="./assets/img/facebook.svg" alt="logo_de_red_social_facebook" /></a></li>
+                            <li><a href="../pages/404.html" class="twitter"><img src="./assets/img/twitter.svg" alt="logo_de_red_social_twitter" /></a></li>
+                            <li><a href="../pages/404.html" class="whatsapp"><img src="./assets/img/whatsapp.svg" alt="logo_de_red_social_whatsapp" /></a></li>
                         </ul>
                         <ul class="menu-footer">
-                            <li><a href="#" class="logo"><img src="/assets/favicon.ico" alt="logo_de_la_pagina" /></a></li>
+                            <li><a href="#" class="logo"><img src="./assets/favicon.ico" alt="logo_de_la_pagina" /></a></li>
                             <li><a href="../index.html" class="selected">Inicio</a></li>
                             <li><a href="../pages/tienda.html">Tienda</a></li>
                             <li><a href="../pages/sobre_nosotros.html">Sobre Nosotros</a></li>
