feature/preEntrega2 v1.1 Bugs fixed

--- a/pages/sobre_nosotros.html
+++ b/pages/sobre_nosotros.html
@@ -48,25 +48,25 @@
             <div class="row">
                 <div class="col-md-6">
                     <h3>Necesitas ayuda? Contacta al Soporte Electrico!!</h3>
-                    <a href="../pages/sobre_nosotros.html" class="rayologo">
-                        <img src="./assets/img/system-regular-117-bolt (1).gif" alt="logo_de_rayo_en_movimiento" />
+                    <a href="../pages/sobre_nosotros.html" class="rayologo link-rojo">
+                        <img src="../assets/img/system-regular-117-bolt (1).gif" alt="logo_de_rayo_en_movimiento" />
                     </a>
                     <div>
                         <p>correo: Mj7pikastore1111@gmailpkatv.com.ar</p>
                         <p>telefono: +54 8283929484</p>
                         <p>Todos los derechos de autor reservados para sus respectivos autores, esta pagina es sin animos de lucro, y solo de ejemplo, lo comprobaran facilmente si simplemente viendo que al comprar algo les aparecera error 404.</p>
-                        <a href="../pages/sobre_nosotros.html">Preguntas frecuentes</a> 
+                        <a href="../pages/sobre_nosotros.html">Preguntas frecuentes</a>
                     </div>
                 </div>
                 <div class="col-md-6">
                     <h4>NUESTRAS REDES SOCIALES TIPO ELECTRICO!</h4>
                     <ul class="redes">
-                        <li><a href="../pages/404.html" class="facebook"><img src="./assets/img/facebook.svg" alt="logo_de_red_social_facebook" /></a></li>
-                        <li><a href="../pages/404.html" class="twitter"><img src="./assets/img/twitter.svg" alt="logo_de_red_social_twitter" /></a></li>
-                        <li><a href="../pages/404.html" class="whatsapp"><img src="./assets/img/whatsapp.svg" alt="logo_de_red_social_whatsapp" /></a></li>
+                        <li><a href="../pages/404.html" class="facebook"><img src="../assets/img/facebook.svg" alt="logo_de_red_social_facebook" /></a></li>
+                        <li><a href="../pages/404.html" class="twitter"><img src="../assets/img/twitter.svg" alt="logo_de_red_social_twitter" /></a></li>
+                        <li><a href="../pages/404.html" class="whatsapp"><img src="../assets/img/whatsapp.svg" alt="logo_de_red_social_whatsapp" /></a></li>
                     </ul>
                     <ul class="menu-footer">
-                        <li><a href="#" class="logo"><img src="./assets/favicon.ico" alt="logo_de_la_pagina" /></a></li>
+                        <li><a href="#" class="logo"><img src="../assets/favicon.ico" alt="logo_de_la_pagina" /></a></li>
                         <li><a href="../index.html" class="selected">Inicio</a></li>
                         <li><a href="../pages/tienda.html">Tienda</a></li>
                         <li><a href="../pages/sobre_nosotros.html">Sobre Nosotros</a></li>
@@ -82,4 +82,6 @@
     <script src="../js/bootstrap.bundle.min.js"></script>
     </body>
     </html>
+
+
 
