--- a/pages/evoluciona_a_raichu.html
+++ b/pages/evoluciona_a_raichu.html
@@ -38,12 +38,12 @@
             <a href="../pages/404.html" class="link-rojo">PARA EVOLUCIONAR A RAICHU ES TAN SIMPLE COMO SEGUIRNOS Y UNIRTE A NUESTRO PATREON! CLICK AQUI PARA UNIRTE A NUESTRO PATREON Y EVOLUCIONAR A RAICHU!!</a>
         </h1>
         <a href="../pages/404.html" class="patreon">
-            <img src="./assets/img/patreon.svg"  alt="logo_de_patreon"/>
+            <img src="../assets/img/patreon.svg"  alt="logo_de_patreon"/>
         </a>
         </p>
         <section>
         <h2> Que beneficios trae evolucionar a raichu? Bastantes cosas la verdad, entre ellas tendrás acceso a una nueva temática de la página, más productos de raichu para comprar, y otras cosas que es mejor que lo averigüen por ustedes mismos!</h2>
-        <img src="./assets/img/pikachu_is_evolving.gif" alt = "pikachu evolucionando en raichu"/>
+        <img src="../assets/img/pikachu_is_evolving.gif" alt = "pikachu evolucionando en raichu"/>
     </section>
     </section>
         </main>
@@ -52,25 +52,25 @@
                 <div class="row">
                     <div class="col-md-6">
                         <h3>Necesitas ayuda? Contacta al Soporte Electrico!!</h3>
-                        <a href="../pages/sobre_nosotros.html" class="rayologo">
-                            <img src="./assets/img/system-regular-117-bolt (1).gif" alt="logo_de_rayo_en_movimiento" />
+                        <a href="../pages/sobre_nosotros.html" class="rayologo link-rojo">
+                            <img src="../assets/img/system-regular-117-bolt (1).gif" alt="logo_de_rayo_en_movimiento" />
                         </a>
                         <div>
                             <p>correo: Mj7pikastore1111@gmailpkatv.com.ar</p>
                             <p>telefono: +54 8283929484</p>
                             <p>Todos los derechos de autor reservados para sus respectivos autores, esta pagina es sin animos de lucro, y solo de ejemplo, lo comprobaran facilmente si simplemente viendo que al comprar algo les aparecera error 404.</p>
-                            <a href="../pages/sobre_nosotros.html">Preguntas frecuentes</a> 
+                            <a href="../pages/sobre_nosotros.html">Preguntas frecuentes</a>
                         </div>
                     </div>
                     <div class="col-md-6">
                         <h4>NUESTRAS REDES SOCIALES TIPO ELECTRICO!</h4>
                         <ul class="redes">
-                            <li><a href="../pages/404.html" class="facebook"><img src="./assets/img/facebook.svg" alt="logo_de_red_social_facebook" /></a></li>
-                            <li><a href="../pages/404.html" class="twitter"><img src="./assets/img/twitter.svg" alt="logo_de_red_social_twitter" /></a></li>
-                            <li><a href="../pages/404.html" class="whatsapp"><img src="./assets/img/whatsapp.svg" alt="logo_de_red_social_whatsapp" /></a></li>
+                            <li><a href="../pages/404.html" class="facebook"><img src="../assets/img/facebook.svg" alt="logo_de_red_social_facebook" /></a></li>
+                            <li><a href="../pages/404.html" class="twitter"><img src="../assets/img/twitter.svg" alt="logo_de_red_social_twitter" /></a></li>
+                            <li><a href="../pages/404.html" class="whatsapp"><img src="../assets/img/whatsapp.svg" alt="logo_de_red_social_whatsapp" /></a></li>
                         </ul>
                         <ul class="menu-footer">
-                            <li><a href="#" class="logo"><img src="./assets/favicon.ico" alt="logo_de_la_pagina" /></a></li>
+                            <li><a href="#" class="logo"><img src="../assets/favicon.ico" alt="logo_de_la_pagina" /></a></li>
                             <li><a href="../index.html" class="selected">Inicio</a></li>
                             <li><a href="../pages/tienda.html">Tienda</a></li>
                             <li><a href="../pages/sobre_nosotros.html">Sobre Nosotros</a></li>
