feature/preEntrega2 v1.1 Bugs fixed in error page 404

--- a/pages/404.html
+++ b/pages/404.html
@@ -36,6 +36,6 @@
 <body>
     <h1>Error 404 | Page Not Found</h1>
     <p>Lo sentimos, la página que buscas no actualmente no existe.</p>
-    <a href="/index.html">Puedes volver a la página principal principal de la pikastore si gustas clickeando aqui</a>
+    <a href="./index.html">Puedes volver a la página principal principal de la pikastore si gustas clickeando aqui</a>
 </body>
 </html>
