--- a/pages/404.html
+++ b/pages/404.html
@@ -35,7 +35,7 @@
 </head>
 <body>
     <h1>Error 404 | Page Not Found</h1>
-    <p>Lo sentimos, la página que buscas no actualmente no existe.</p>
-    <a href="./index.html">Puedes volver a la página principal principal de la pikastore si gustas clickeando aqui</a>
+    <p>Lo sentimos, la página que buscas actualmente no existe.</p>
+    <a href="../index.html">Puedes volver a la página principal principal de la pikastore si gustas clickeando aqui</a>
 </body>
 </html>
