--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <div class="col-md-6">
                 <section class="bienvenida">
                     <h1>Bienvenido a la PikaStore!</h1>
-                    <p> en esta pagina encontraras toda una tienda exclusiva para el pokemon mas conocido y sobrevalorado (con justas razones) Pikachu! y tambien si les interesa, tienen ciertos apartados de su evolucion infravalorada raichu!</p>    
+                    <p> En esta pagina encontraras toda una tienda exclusiva para el pokemon mas conocido y sobrevalorado (con justas razones) Pikachu! y tambien si les interesa, tienen ciertos apartados de su evolucion infravalorada raichu!</p>    
                 </section>
             </div>
             <div class="col-md-6">
