--- a/pages/evoluciona_a_raichu.html
+++ b/pages/evoluciona_a_raichu.html
@@ -37,15 +37,38 @@
         <h1> 
             <a href="../pages/404.html" class="link-rojo">PARA EVOLUCIONAR A RAICHU ES TAN SIMPLE COMO SEGUIRNOS Y UNIRTE A NUESTRO PATREON! CLICK AQUI PARA UNIRTE A NUESTRO PATREON Y EVOLUCIONAR A RAICHU!!</a>
         </h1>
+        <div class="row">
+            <div class="col-md-6">
         <a href="../pages/404.html" class="patreon">
             <img src="../assets/img/patreon.svg"  alt="logo_de_patreon"/>
-        </a>
-        </p>
+        </a> 
+    </div>
+    <div class="col-md-6">
+        <img src="../assets/img/PIKACHU IS EVOLVING_GBA.gif" alt="Pikachu_evolucionando_a_raichu_version_GBA"/>
         <section>
+        </div>
+    </div>
+            <div class="row margen-arriba">
+            <div class="col-md-6">
         <h2> Que beneficios trae evolucionar a raichu? Bastantes cosas la verdad, entre ellas tendrás acceso a una nueva temática de la página, más productos de raichu para comprar, y otras cosas que es mejor que lo averigüen por ustedes mismos!</h2>
-        <img src="../assets/img/pikachu_is_evolving.gif" alt = "pikachu evolucionando en raichu"/>
-    </section>
-    </section>
+    </div>
+    <div class="col-md-6">
+        <img src="../assets/img/pikachu_is_evolving.gif" alt = "pikachu evolucionando en raichu" class="pikachu_is_evolving"/>
+    </div>
+    </div>
+    <section>
+        <div class="row">
+    <div class="pikatv col-md-6">
+        <h3>SELECCION DE LA PIKATV DEL DIA!!</h3>
+        <video src="../assets/videos/Pokémon-Opening-10-Diamante-y-perla-1.mp4" class="video2" alt="Pokémon-Opening-1-diamante-y-perla" controls></video>
+    </div>
+    <div class="col-md-6">
+    <img src="../assets/img/pikachu-y-eevee-escuchando-musica.gif" alt="imagen animada de pikachu y eeveee escuchando musica" class="gif-animado-piakchu-eevee">
+</div>  
+</div>
+</section>
+</section>
+
         </main>
         <footer>     
             <section class="footer container">
