--- a/pages/informacion_de_contacto.html
+++ b/pages/informacion_de_contacto.html
@@ -33,23 +33,66 @@
     </header>
     <main class="container">
         <section class="bienvenida">
-            <h1>CONTACTANOS DE UN ATAQAUE RAPIDO!</h1>
-            <p> REDES SOCIALES: 
-                <section class="TIPOS_DE_CONTACTOS">
-                    <a href="../pages/404.html">
-                        <img src="../assets/img/facebook.svg" alt="logo_de_red_social_facebook" />
-                    <a href="../pages/404.html">
-                        <img src="../assets/img/twitter.svg" alt="logo_de_red_social_twitter" />
-                    <a href="../pages/404.html">
-                        <img src="../assets/img/whatsapp.svg" alt="logo_de_red_social_whatsapp" />
-            </p>
-           <h2>Cual es nuestro sitio de trabajo?</h2>
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1652093.4870695416!2d139.63801375!3d36.0265177!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6018b60012220e6f%3A0x69d63b267e399f89!2zUmVnacOzbiBkZSBLYW50xY0sIEphcMOzbg!5e0!3m2!1ses!2sar!4v1707800063030!5m2!1ses!2sar" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-            <p>correo: Mj7pikastore1111111@gmailpkatv.com.ar</p>
-              <p> telefono: +54 8283929484 </p>
-              <a href="../pages/evoluciona_a_raichu.html">Has pensado en evolucionar a raichu? pikachu parece tener ganas de evolucionar pronto! Click aqui para mas informacion sobre evolucionar de pikachu a raichu!</a>
+            <div class="row">
+                <div class="col-md-6">
+                    <h1>CONTACTANOS DE UN ATAQUE RAPIDO!</h1>
+                    <h2>Cual es nuestro sitio de trabajo?</h2>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1652093.4870695416!2d139.63801375!3d36.0265177!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6018b60012220e6f%3A0x69d63b267e399f89!2zUmVnacOzbiBkZSBLYW50xY0sIEphcMOzbg!5e0!3m2!1ses!2sar!4v1707800063030!5m2!1ses!2sar" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div>
+                <div class="col-md-6">
+                    <p> REDES SOCIALES: </p>
+                    <section class="TIPOS_DE_CONTACTOS">
+                        <a href="../pages/404.html">
+                            <img src="../assets/img/facebook.svg" alt="logo_de_red_social_facebook" />
+                        </a>
+                        <a href="../pages/404.html">
+                            <img src="../assets/img/twitter.svg" alt="logo_de_red_social_twitter" />
+                        </a>
+                        <a href="../pages/404.html">
+                            <img src="../assets/img/whatsapp.svg" alt="logo_de_red_social_whatsapp" />
+                        </a>
+                        <a href="../pages/404.html">
+                            <img src="../assets/img/reddit.svg" alt="logo_de_red_social_reddit" />
+                        </a>
+                        <a href="../pages/404.html">
+                            <img src="../assets/img/discord.svg" alt="logo_de_red_social_discord" />
+                        </a>
+                        <a href="../pages/404.html">
+                            <img src="../assets/img/instagram-square.svg" alt="logo_de_red_social_instagram"/>
+                        </a>
+                        <a href="../pages/404.html">
+                            <img src="../assets/img/twitch.svg" alt="logo_de_red_social_twitch" />
+                        </a>
+                        <a href="../pages/404.html">
+                            <img src="../assets/img/youtube.svg" alt="logo_de_red_social_youtube" />
+                        </a>
+                        <a href="../pages/404.html">
+                            <img src="../assets/img/telegram.svg" alt="logo_de_red_social_telegram" />
+                        </a>
+                        <p> Correo: Mj7pikastore1111111@gmailpkatv.com.ar</p>
+                        <p> Telefono: +54 8283929484 </p>
+                    </section>
+                </div>
+            </div>
+    </div>
         </section>
-        <a href="../pages/evoluciona_a_raichu.html"><img src="../assets/img/pikachu_is_evolving.gif"></a>
+        <section class="bienvenida2 margen-arriba2">
+            <div class="row">
+                <div class="col-md-6">
+            <a href="../pages/evoluciona_a_raichu.html">Has pensado en evolucionar a raichu? pikachu parece tener ganas de evolucionar pronto! Click aqui para mas informacion sobre evolucionar de pikachu a raichu!</a>
+            </div>
+            <div class="col-md-6">
+            <a href="../pages/evoluciona_a_raichu.html"><img src="../assets/img/pikachu_is_evolving.gif" class="gif-pikachu-is-evolving"></a>
+            </div>
+            <div class="pikatv col-md-6">
+                <h3>SELECCION DE LA PIKATV DEL DIA!!</h3>
+                <video src="../assets/videos/Pokémon-Opening 17-Volt.mp4" class="video2" alt="Pokémon-Opening 17-Volt" controls></video>
+            </div>
+            <div class="col-md-6">
+            <img src="../assets/img/pikachu-y-eevee-escuchando-musica.gif" alt="imagen animada de pikachu y eeveee escuchando musica" class="gif-animado-piakchu-eevee">
+        </div>  
+        </div>
+        </section>
     </main>    
         <footer>     
             <section class="footer container">
