--- a/pages/sobre_nosotros.html
+++ b/pages/sobre_nosotros.html
@@ -34,18 +34,33 @@
     <main class="container">
         <section class="bienvenida">
         <h1>Quienes Somos?</h1>
-        <p> solo somos fanaticos de pokemon que sabe de la popularidad del hamster amarillo electrico mas conocido en el mundo (Si, pikachu es un hamster aunque no lo parezca),
-            y tenemos la meta de que mas gente aun conozca a pikachu y tenga acceso a todos tipo de productos de el, ademas de que si alguien mas aca prefiere a raichu sobre pikachu 
+        <p> Solo somos fanaticos de pokemon que sabe de la popularidad del hamster amarillo electrico mas conocido en el mundo (Si, pikachu es un hamster aunque no lo parezca),
+            y tenemos la meta de que mas gente conozca a pikachu y tenga acceso a todos tipo de productos de el, ademas por si alguien mas aca prefiere a raichu sobre pikachu 
             (como es el caso del creador de la pagina, que su pokemon favorito es raichu) puedan tener acceso a cosas sobre el, aunque la mayoria de cosas de raichu se desbloquearan comprando la piedra trueno y evolucionando a raichu 
             debido a que consideramos que raichu tiene mas valor que pikachu!
         </p>
+        <div class="row">
         <h1>Cual es nuestro sitio de trabajo?</h1>
+        <div class="col-md-6">
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1652093.4870695416!2d139.63801375!3d36.0265177!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6018b60012220e6f%3A0x69d63b267e399f89!2zUmVnacOzbiBkZSBLYW50xY0sIEphcMOzbg!5e0!3m2!1ses!2sar!4v1707800063030!5m2!1ses!2sar" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-        <p>correo: Mj7pikastore1111111@gmailpkatv.com.ar</p>
-        <p> telefono: +54 8283929484 </p>
+        </div>
+        <div class="col-md-6">
         <h2>Recuerda que si tienes dudas puedes pasarte por la seccion de "informacion de contacto" para contactarnos de un ataque rapido!!</h2>
         <a href="../pages/informacion_de_contacto.html"><b>CLICK AQUI PARA REDIRIGIRTE A LA SECCION "INFORMACION DE CONTACTO"</b></a>
-     </section>
+       </div>
+       </div>
+        <hr3>SELECCION DE LA PIKATV DEL DIA!</hr3>
+        <div class="row margen-arriba">
+        <div class="col-md-6">
+        <video src="../assets/videos/KH-BBS-REMIX-OP.mp4" class="video" alt="Intro de kingdom hearts birth by sleep" controls></video>
+        </div>
+        <div class="col-md-6">
+        <p>Correo: Mj7pikastore1111111@gmailpkatv.com.ar</p>
+        <p> Telefono: +54 8283929484 </p>
+        <img src="../assets/img/pikachu-y-eevee-escuchando-musica.gif" alt="imagen animada de pikachu y eeveee escuchando musica" class="gif-animado-piakchu-eevee2">
+        </div>
+    </div>
+    </section>
     </main>   
     <footer>     
         <section class="footer container">
