--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -62,20 +62,20 @@
                 </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#product-carousel" data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <img src="../assets/img/arrow-left.svg" alt="Botón Anterior">
                 <span class="visually-hidden">Anterior</span>
             </button>
             <button class="carousel-control-next" type="button" data-bs-target="#product-carousel" data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <img src="../assets/img/arrow-right.svg" alt="Botón siguiente">
                 <span class="visually-hidden">Siguiente</span>
             </button>
         </div>
     </section>
             <section class="pikasong">
             <h3>
-                Bienvenido a la PikaTV:
+                Seleccion de la PIKATV del dia!:
             </h3>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/ES5J5XLLFgg?si=qAAtWOA4liMHSUfd" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen loading="lazy"></iframe>   
+            <video src="../assets/videos/oshi-no-ko-opening-YOASOBI.mp4" class="video" alt="opening de oshi no ko - YOASOBI" controls></video>
             </section>
         </main>    
         <footer>     
