--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
         </nav>
     </header>
     <main class="container">
+        <section class="main container">
         <div class="row">
             <div class="col-md-6">
                 <section class="bienvenida">
@@ -45,7 +46,7 @@
                         <div class="col-md-6">
                         </div>
                         <div class="col-md-6">
-                    <img src="./assets/img/pikachu-dance.gif">
+                    <img src="./assets/img/pikachu-dance.gif" class="Pikagif">
                     </div>
                    </section>
             </div>
@@ -57,7 +58,7 @@
         <iframe width="560" height="315" src="https://www.youtube.com/embed/ES5J5XLLFgg?si=qAAtWOA4liMHSUfd" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen loading="lazy"></iframe>   
     </div>
     </main>
-    <footer>     
+    <footer class="colorfuera">     
         <section class="footer container">
             <div class="row">
                 <div class="col-md-4">
