--- a/pages/evoluciona_a_raichu.html
+++ b/pages/evoluciona_a_raichu.html
@@ -31,7 +31,7 @@
         </ul>
         </nav>
     </header>
-    <main class="container_repuesto container">
+    <main class="main container_repuesto container">
         <section>
         <h1>VEO QUE TE DECIDISTE POR COMPRAR UNA PIEDRA TRUENO! GENIAL, ESTAS A UN SOLO PASO DE EVOLUCIONAR A RAICHU!</h1>
         <h1> 
@@ -69,7 +69,7 @@
 </section>
 </section>
         </main>
-        <footer>     
+        <footer class="colorfuera">     
             <section class="footer container">
                 <div class="row">
                     <div class="col-md-4">
