--- a/pages/informacion_de_contacto.html
+++ b/pages/informacion_de_contacto.html
@@ -31,7 +31,7 @@
         </ul>
         </nav>
     </header>
-    <main class="container">
+    <main class="main container">
         <section class="bienvenida">
             <div class="row">
                 <div class="col-md-6">
@@ -94,7 +94,7 @@
         </div>
         </section>
     </main>    
-        <footer>     
+        <footer class="colorfuera">     
             <section class="footer container">
                 <div class="row">
                     <div class="col-md-4">
