--- a/pages/sobre_nosotros.html
+++ b/pages/sobre_nosotros.html
@@ -31,7 +31,7 @@
         </ul>
         </nav>
     </header>
-    <main class="container">
+    <main class="main container">
         <section class="bienvenida">
         <h1>Quienes Somos?</h1>
         <p> Solo somos fanaticos de pokemon que sabe de la popularidad del hamster amarillo electrico mas conocido en el mundo (Si, pikachu es un hamster aunque no lo parezca),
@@ -62,7 +62,7 @@
     </div>
     </section>
     </main>   
-    <footer>     
+    <footer class="colorfuera">     
         <section class="footer container">
             <div class="row">
                 <div class="col-md-4">
