--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -31,7 +31,7 @@
         </ul>
         </nav>
     </header>
-    <main class="container">
+    <main class="main container">
         <section class="bienvenida">
         <h1>Bienvenido a la PikaStore!</h1>
         <p>En esta página encontrarás toda una tienda exclusiva para el Pokémon más conocido y sobrevalorado (con justas razones) Pikachu! Y también, si les interesa, tienen ciertos apartados de su evolución infravalorada Raichu!</p>
@@ -78,7 +78,7 @@
             <video src="../assets/videos/oshi-no-ko-opening-YOASOBI.mp4" class="video" alt="opening de oshi no ko - YOASOBI" controls></video>
             </section>
         </main>    
-        <footer>     
+        <footer class="colorfuera">     
             <section class="footer container">
                 <div class="row">
                     <div class="col-md-4">
