--- a/pages/evoluciona_a_raichu.html
+++ b/pages/evoluciona_a_raichu.html
@@ -43,7 +43,7 @@
             <img src="../assets/img/patreon.svg"  alt="logo_de_patreon"/>
         </a> 
     </div>
-    <div class="col-md-6">
+    <div class="col-md-6 pikachuraichugba">
         <img src="../assets/img/PIKACHU IS EVOLVING_GBA.gif" alt="Pikachu_evolucionando_a_raichu_version_GBA"/>
         <section>
         </div>
@@ -52,7 +52,7 @@
             <div class="col-md-6">
         <h2> Que beneficios trae evolucionar a raichu? Bastantes cosas la verdad, entre ellas tendrás acceso a una nueva temática de la página, más productos de raichu para comprar, y otras cosas que es mejor que lo averigüen por ustedes mismos!</h2>
     </div>
-    <div class="col-md-6">
+    <div class="col-md-6 pikachuraichuanime">
         <img src="../assets/img/pikachu_is_evolving.gif" alt = "pikachu evolucionando en raichu" class="pikachu_is_evolving"/>
     </div>
     </div>
@@ -62,8 +62,8 @@
         <h3>SELECCION DE LA PIKATV DEL DIA!!</h3>
         <video src="../assets/videos/Pokémon-Opening-10-Diamante-y-perla-1.mp4" class="video2" alt="Pokémon-Opening-1-diamante-y-perla" controls></video>
     </div>
-    <div class="col-md-6">
-    <img src="../assets/img/pikachu-y-eevee-escuchando-musica.gif" alt="imagen animada de pikachu y eeveee escuchando musica" class="gif-animado-piakchu-eevee">
+    <div class="col-md-6 pikachueevee">
+    <img src="../assets/img/pikachu-y-eevee-escuchando-musica.gif" alt="imagen animada de pikachu y eeveee escuchando musica" class="gif-animado-pikachu-eevee">
 </div>  
 </div>
 </section>
