--- a/pages/informacion_de_contacto.html
+++ b/pages/informacion_de_contacto.html
@@ -69,8 +69,8 @@
                         <a href="../pages/404.html">
                             <img src="../assets/img/telegram.svg" alt="logo_de_red_social_telegram" />
                         </a>
-                        <p> Correo: Mj7pikastore1111111@gmailpkatv.com.ar</p>
-                        <p> Telefono: +54 8283929484 </p>
+                        <p> <b>Correo: Mj7pikastore1111111@gmailpkatv.com.ar</p>
+                        <p> Telefono: +54 8283929484</b> </p>
                     </section>
                 </div>
             </div>
@@ -84,12 +84,12 @@
             <div class="col-md-6">
             <a href="../pages/evoluciona_a_raichu.html"><img src="../assets/img/pikachu_is_evolving.gif" class="gif-pikachu-is-evolving"></a>
             </div>
-            <div class="pikatv col-md-6">
+            <div class="pikatv2 col-md-6">
                 <h3>SELECCION DE LA PIKATV DEL DIA!!</h3>
                 <video src="../assets/videos/Pokémon-Opening 17-Volt.mp4" class="video2" alt="Pokémon-Opening 17-Volt" controls></video>
             </div>
-            <div class="col-md-6">
-            <img src="../assets/img/pikachu-y-eevee-escuchando-musica.gif" alt="imagen animada de pikachu y eeveee escuchando musica" class="gif-animado-piakchu-eevee">
+            <div class="col-md-6 pikachueevee2">
+            <img src="../assets/img/pikachu-y-eevee-escuchando-musica.gif" alt="imagen animada de pikachu y eeveee escuchando musica" class="gif-animado-pikachu-eevee">
         </div>  
         </div>
         </section>
