--- a/pages/sobre_nosotros.html
+++ b/pages/sobre_nosotros.html
@@ -49,15 +49,17 @@
         <a href="../pages/informacion_de_contacto.html"><b>CLICK AQUI PARA REDIRIGIRTE A LA SECCION "INFORMACION DE CONTACTO"</b></a>
        </div>
        </div>
-        <hr3>SELECCION DE LA PIKATV DEL DIA!</hr3>
-        <div class="row margen-arriba">
-        <div class="col-md-6">
+       <div class="margen-arriba"></div>
+        <hr2><b>SELECCION DE LA PIKATV DEL DIA!</b></hr2>
+        <div class="margen-arriba2"></div>
+        <div class="row">
+        <div class="pikatv2 col-md-6">
         <video src="../assets/videos/KH-BBS-REMIX-OP.mp4" class="video" alt="Intro de kingdom hearts birth by sleep" controls></video>
         </div>
-        <div class="col-md-6">
-        <p>Correo: Mj7pikastore1111111@gmailpkatv.com.ar</p>
-        <p> Telefono: +54 8283929484 </p>
-        <img src="../assets/img/pikachu-y-eevee-escuchando-musica.gif" alt="imagen animada de pikachu y eeveee escuchando musica" class="gif-animado-piakchu-eevee2">
+        <div class="pikachueevee2 col-md-6">
+        <p><b>Correo: Mj7pikastore1111111@gmailpkatv.com.ar</p>
+        <p> Telefono: +54 8283929484</b> </p>
+        <img src="../assets/img/pikachu-y-eevee-escuchando-musica.gif" alt="imagen animada de pikachu y eeveee escuchando musica" class="gif-animado-pikachu-eevee2">
         </div>
     </div>
     </section>
