--- a/pages/informacion_de_contacto.html
+++ b/pages/informacion_de_contacto.html
@@ -70,7 +70,7 @@
                             <img src="../assets/img/telegram.svg" alt="logo_de_red_social_telegram" />
                         </a>
                     </section>
-                    <p> <b>Correo: Mj7pikastore1111111@gmailpkatv.com.ar</p>
+                    <p> <b>Correo: Mj7pikastore1111111@gmailpkatv.com</p>
                         <p> Telefono: +54 8283929484</b> </p>
                 </div>
             </div>
