--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -33,9 +33,9 @@
     </header>
     <main class="main container margen-arriba4">
         <section class="bienvenida">
-        <h1>Bienvenido a la PikaStore!</h1>
-        <p>En esta página encontrarás toda una tienda exclusiva para el Pokémon más conocido y sobrevalorado (con justas razones) Pikachu! Y también, si les interesa, tienen ciertos apartados de su evolución infravalorada Raichu!</p>
-        <h2>¡Ya que estás en la tienda, ¿por qué no miras algunos de nuestros productos?</h2>
+        <h1>¡Bienvenido a la PikaStore!</h1>
+        <p>En esta página encontrarás toda una tienda exclusiva para el Pokémon más conocido y sobrevalorado (con justas razones), Pikachu. ¡Y también, si les interesa, tienen ciertos apartados de su evolución infravalorada, Raichu!</p>
+        <h2>¡Ya que estás en la tienda, ¿por qué no miras algunos de nuestros productos?!</h2>
     </section>
     <section class="productos">
         <div id="product-carousel" class="carousel slide" data-bs-ride="carousel">
@@ -73,7 +73,7 @@
     </section>
             <section class="pikasong">
             <h3>
-                Seleccion de la PIKATV del dia!:
+                ¡Selección de la PIKATV del día!:
             </h3>
             <video src="../assets/videos/oshi-no-ko-opening-YOASOBI.mp4" class="video" alt="opening de oshi no ko - YOASOBI" controls></video>
             </section>
@@ -84,10 +84,10 @@
                     <div class="col-md-4">
                         <a href="../pages/informacion_de_contacto.html" class="rayologo">
                             <img src="../assets/img/system-regular-117-bolt (1).gif" alt="logo_de_rayo_en_movimiento" />
-                            Necesitas ayuda? Contacta al Soporte Electrico!!
+                            ¡¿Necesitas ayuda?! ¡Contacta al Soporte Eléctrico!
                         </a>
                         <div>
-                            <p>Todos los derechos de autor reservados para sus respectivos autores, esta pagina es sin animos de lucro, y solamente estetico.</p>
+                            <p>Todos los derechos de autor reservados para sus respectivos autores. Esta página es sin ánimos de lucro y solamente estético.</p>
                         </div>
                         <a href="../pages/sobre_nosotros.html">Preguntas frecuentes</a> 
                     </div>
@@ -98,7 +98,7 @@
                             <li><a href="../pages/tienda.html">Tienda</a></li>
                             <li><a href="../pages/sobre_nosotros.html">Sobre Nosotros</a></li>
                             <li><a href="../pages/informacion_de_contacto.html">Informacion de Contacto</a></li>
-                            <li><a href="../pages/evoluciona_a_raichu.html">Evoluciona a raichu</a></li>
+                            <li><a href="../pages/evoluciona_a_raichu.html">Evoluciona a Raichu</a></li>
                         </ul>
                     </div>
                     <div class="col-md-4">
