--- a/pages/evoluciona_a_raichu.html
+++ b/pages/evoluciona_a_raichu.html
@@ -32,7 +32,7 @@
         </nav>
     </header>
     <main class="main container_repuesto container">
-        <section class="margen-arriba4">
+        <section>
         <h1>¡VEO QUE TE DECIDISTE POR COMPRAR UNA PIEDRA TRUENO! ¡GENIAL, ESTÁS A UN SOLO PASO DE EVOLUCIONAR A RAICHU!</h1>
         <h1> 
             <a href="../pages/404.html" class="link-rojo">¡Para evolucionar a Raichu es tan simple como seguirnos y unirte a nuestro Patreon! Luego registra tu email aquí abajo y listo. ¡Haz clic aquí para unirte a nuestro Patreon y evolucionar a Raichu!</a>
