--- a/pages/evoluciona_a_raichu.html
+++ b/pages/evoluciona_a_raichu.html
@@ -31,7 +31,7 @@
         </ul>
         </nav>
     </header>
-    <main class="main container_repuesto container margen-arriba4">
+    <main class="main container_repuesto container">
         <section>
         <h1>¡VEO QUE TE DECIDISTE POR COMPRAR UNA PIEDRA TRUENO! ¡GENIAL, ESTÁS A UN SOLO PASO DE EVOLUCIONAR A RAICHU!</h1>
         <h1> 
