--- a/pages/informacion_de_contacto.html
+++ b/pages/informacion_de_contacto.html
@@ -31,7 +31,7 @@
         </ul>
         </nav>
     </header>
-    <main class="main container margen-arriba4">
+    <main class="main container">
         <section class="bienvenida">
             <div class="row">
                 <div class="col-md-6">
