--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -31,7 +31,7 @@
         </ul>
         </nav>
     </header>
-    <main class="main container">
+    <main class="container">
         <section class="bienvenida">
         <h1>¡Bienvenido a la PikaStore!</h1>
         <p>En esta página encontrarás toda una tienda exclusiva para el Pokémon más conocido y sobrevalorado (con justas razones), Pikachu. ¡Y también, si les interesa, tienen ciertos apartados de su evolución infravalorada, Raichu!</p>
