--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
                 <li><a href="./pages/tienda.html">Tienda</a></li>
                 <li><a href="./pages/sobre_nosotros.html">Sobre Nosotros</a></li>
                 <li><a href="./pages/informacion_de_contacto.html">Informacion de Contacto</a></li>
-                <li><a href="./pages/evoluciona_a_raichu.html">Evoluciona a raichu</a></li>
+                <li><a href="./pages/evoluciona_a_raichu.html">Evoluciona a Raichu</a></li>
             </ul>
         </nav>
     </header>
-    <main class="container">
+    <main class="container margen-arriba3">
         <section class="main container">
         <div class="row">
             <div class="col-md-6">
