--- a/pages/informacion_de_contacto.html
+++ b/pages/informacion_de_contacto.html
@@ -26,17 +26,17 @@
             <li><a href="../index.html">Inicio</a></li>
             <li><a href="../pages/tienda.html">Tienda</a></li>
             <li><a href="../pages/sobre_nosotros.html">Sobre Nosotros</a></li>
-            <li><a href="../pages/informacion_de_contacto.html" class="selected">Información de Contacto</a></li>
-            <li><a href="../pages/evoluciona_a_raichu.html">Evoluciona a Raichu</a></li>
+            <li><a href="../pages/informacion_de_contacto.html" class="selected">Informacion de Contacto</a></li>
+            <li><a href="../pages/evoluciona_a_raichu.html">Evoluciona a raichu</a></li>
         </ul>
         </nav>
     </header>
-    <main class="main container margen-arriba3">
+    <main class="main container">
         <section class="bienvenida">
             <div class="row">
                 <div class="col-md-6">
-                    <h1>¡CONTÁCTANOS DE UN ATAQUE RÁPIDO!</h1>
-                    <h2>¿Cuál es nuestro sitio de trabajo?</h2>
+                    <h1>CONTACTANOS DE UN ATAQUE RAPIDO!</h1>
+                    <h2>Cual es nuestro sitio de trabajo?</h2>
                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1652093.4870695416!2d139.63801375!3d36.0265177!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6018b60012220e6f%3A0x69d63b267e399f89!2zUmVnacOzbiBkZSBLYW50xY0sIEphcMOzbg!5e0!3m2!1ses!2sar!4v1707800063030!5m2!1ses!2sar" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
                 <div class="col-md-6">
@@ -69,9 +69,9 @@
                         <a href="../pages/404.html">
                             <img src="../assets/img/telegram.svg" alt="logo_de_red_social_telegram" />
                         </a>
-                    </section>
-                    <p> <b>Correo: Mj7pikastore1111111@gmailpkatv.com</p>
+                        <p> <b>Correo: Mj7pikastore1111111@gmailpkatv.com.ar</p>
                         <p> Telefono: +54 8283929484</b> </p>
+                    </section>
                 </div>
             </div>
     </div>
@@ -79,16 +79,17 @@
         <section class="bienvenida2 margen-arriba2">
             <div class="row">
                 <div class="col-md-6">
-            <a href="../pages/evoluciona_a_raichu.html">¿Has pensado en evolucionar a Raichu? ¡Parece que Pikachu tiene ganas de evolucionar pronto! Haz clic aquí para obtener más información sobre cómo evolucionar de Pikachu a Raichu.</a>
+            <a href="../pages/evoluciona_a_raichu.html">Has pensado en evolucionar a raichu? pikachu parece tener ganas de evolucionar pronto! Click aqui para mas informacion sobre evolucionar de pikachu a raichu!</a>
             </div>
             <div class="col-md-6">
+            <a href="../pages/evoluciona_a_raichu.html"><img src="../assets/img/pikachu_is_evolving.gif" class="gif-pikachu-is-evolving"></a>
             </div>
             <div class="pikatv2 col-md-6">
-                <h3>¡SELECCIÓN DE LA PIKATV DEL DÍA!</h3>
+                <h3>SELECCION DE LA PIKATV DEL DIA!!</h3>
                 <video src="../assets/videos/Pokémon-Opening 17-Volt.mp4" class="video2" alt="Pokémon-Opening 17-Volt" controls></video>
             </div>
             <div class="col-md-6 pikachueevee2">
-            <img src="../assets/img/pikachu-con-gafas.gif" alt="imagen animada de pikachu con gafas bailando" class="gif-animado-pikachu-eevee">
+            <img src="../assets/img/pikachu-y-eevee-escuchando-musica.gif" alt="imagen animada de pikachu y eeveee escuchando musica" class="gif-animado-pikachu-eevee">
         </div>  
         </div>
         </section>
@@ -99,10 +100,10 @@
                     <div class="col-md-4">
                         <a href="../pages/informacion_de_contacto.html" class="rayologo">
                             <img src="../assets/img/system-regular-117-bolt (1).gif" alt="logo_de_rayo_en_movimiento" />
-                            ¡¿Necesitas ayuda?! ¡Contacta al Soporte Eléctrico!
+                            Necesitas ayuda? Contacta al Soporte Electrico!!
                         </a>
                         <div>
-                            <p>Todos los derechos de autor reservados para sus respectivos autores. Esta página es sin ánimos de lucro y solamente estética.</p>
+                            <p>Todos los derechos de autor reservados para sus respectivos autores, esta pagina es sin animos de lucro, y solamente estetico.</p>
                         </div>
                         <a href="../pages/sobre_nosotros.html">Preguntas frecuentes</a> 
                     </div>
@@ -112,8 +113,8 @@
                             <li><a href="../index.html" class="selected">Inicio</a></li>
                             <li><a href="../pages/tienda.html">Tienda</a></li>
                             <li><a href="../pages/sobre_nosotros.html">Sobre Nosotros</a></li>
-                            <li><a href="../pages/informacion_de_contacto.html">Información de Contacto</a></li>
-                            <li><a href="../pages/evoluciona_a_raichu.html">Evoluciona a Raichu</a></li>
+                            <li><a href="../pages/informacion_de_contacto.html">Informacion de Contacto</a></li>
+                            <li><a href="../pages/evoluciona_a_raichu.html">Evoluciona a raichu</a></li>
                         </ul>
                     </div>
                     <div class="col-md-4">
