--- a/pages/sobre_nosotros.html
+++ b/pages/sobre_nosotros.html
@@ -31,32 +31,35 @@
         </ul>
         </nav>
     </header>
-    <main class="main container margen-arriba3">
+    <main class="main container">
         <section class="bienvenida">
-        <h1>¿Quiénes somos?</h1>
-        <p> Solo somos fanáticos de Pokémon que saben de la popularidad del hámster amarillo eléctrico más conocido en el mundo (Sí, Pikachu es un hámster aunque no lo parezca), y tenemos la meta de que más gente conozca a Pikachu y tenga acceso a todo tipo de productos relacionados con él. Además, por si alguien más aquí prefiere a Raichu sobre Pikachu (como es el caso del creador de la página, cuyo Pokémon favorito es Raichu), puedan tener acceso a cosas sobre él. Aunque la mayoría de las cosas de Raichu se desbloquearán comprando la piedra trueno y evolucionando a Raichu, debido a que consideramos que Raichu tiene más valor que Pikachu.
+        <h1>Quienes Somos?</h1>
+        <p> Solo somos fanaticos de pokemon que sabe de la popularidad del hamster amarillo electrico mas conocido en el mundo (Si, pikachu es un hamster aunque no lo parezca),
+            y tenemos la meta de que mas gente conozca a pikachu y tenga acceso a todos tipo de productos de el, ademas por si alguien mas aca prefiere a raichu sobre pikachu 
+            (como es el caso del creador de la pagina, que su pokemon favorito es raichu) puedan tener acceso a cosas sobre el, aunque la mayoria de cosas de raichu se desbloquearan comprando la piedra trueno y evolucionando a raichu 
+            debido a que consideramos que raichu tiene mas valor que pikachu!
         </p>
         <div class="row">
-        <h1>¿Cuál es nuestro sitio de trabajo?</h1>
+        <h1>Cual es nuestro sitio de trabajo?</h1>
         <div class="col-md-6">
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1652093.4870695416!2d139.63801375!3d36.0265177!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6018b60012220e6f%3A0x69d63b267e399f89!2zUmVnacOzbiBkZSBLYW50xY0sIEphcMOzbg!5e0!3m2!1ses!2sar!4v1707800063030!5m2!1ses!2sar" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
         <div class="col-md-6">
-        <h2>¡Recuerda que si tienes dudas, puedes pasarte por la sección de "Información de Contacto" para contactarnos de manera rápida!</h2>
-        <a href="../pages/informacion_de_contacto.html"><b>Haz clic aquí para redirigirte a la sección "Información de Contacto".</b></a>
+        <h2>Recuerda que si tienes dudas puedes pasarte por la seccion de "informacion de contacto" para contactarnos de un ataque rapido!!</h2>
+        <a href="../pages/informacion_de_contacto.html"><b>CLICK AQUI PARA REDIRIGIRTE A LA SECCION "INFORMACION DE CONTACTO"</b></a>
        </div>
        </div>
        <div class="margen-arriba"></div>
-        <hr2><b>¡SELECCIÓN DE LA PIKATV DEL DÍA!</b></hr2>
+        <hr2><b>SELECCION DE LA PIKATV DEL DIA!</b></hr2>
         <div class="margen-arriba2"></div>
         <div class="row">
         <div class="pikatv2 col-md-6">
         <video src="../assets/videos/KH-BBS-REMIX-OP.mp4" class="video" alt="Intro de kingdom hearts birth by sleep" controls></video>
         </div>
         <div class="pikachueevee2 col-md-6">
-        <p><b>Correo: Mj7pikastore1111111@gmailpkatv.com</p>
-        <p> Teléfono: +54 8283929484</b> </p>
-        <img src="../assets/img/pikachu-con-gafas.gif" alt="imagen animada de pikachu con gafas bailando" class="gif-animado-pikachu-eevee2">
+        <p><b>Correo: Mj7pikastore1111111@gmailpkatv.com.ar</p>
+        <p> Telefono: +54 8283929484</b> </p>
+        <img src="../assets/img/pikachu-y-eevee-escuchando-musica.gif" alt="imagen animada de pikachu y eeveee escuchando musica" class="gif-animado-pikachu-eevee2">
         </div>
     </div>
     </section>
@@ -67,10 +70,10 @@
                 <div class="col-md-4">
                     <a href="../pages/informacion_de_contacto.html" class="rayologo">
                         <img src="../assets/img/system-regular-117-bolt (1).gif" alt="logo_de_rayo_en_movimiento" />
-                        ¡¿Necesitas ayuda?! ¡Contacta al Soporte Eléctrico!
+                        Necesitas ayuda? Contacta al Soporte Electrico!!
                     </a>
                     <div>
-                        <p>Todos los derechos de autor reservados para sus respectivos autores. Esta página es sin ánimos de lucro y solamente estética.</p>
+                        <p>Todos los derechos de autor reservados para sus respectivos autores, esta pagina es sin animos de lucro, y solamente estetico.</p>
                     </div>
                     <a href="../pages/sobre_nosotros.html">Preguntas frecuentes</a> 
                 </div>
@@ -80,8 +83,8 @@
                         <li><a href="../index.html" class="selected">Inicio</a></li>
                         <li><a href="../pages/tienda.html">Tienda</a></li>
                         <li><a href="../pages/sobre_nosotros.html">Sobre Nosotros</a></li>
-                        <li><a href="../pages/informacion_de_contacto.html">Información de Contacto</a></li>
-                        <li><a href="../pages/evoluciona_a_raichu.html">Evoluciona a Raichu</a></li>
+                        <li><a href="../pages/informacion_de_contacto.html">Informacion de Contacto</a></li>
+                        <li><a href="../pages/evoluciona_a_raichu.html">Evoluciona a raichu</a></li>
                     </ul>
                 </div>
                 <div class="col-md-4">
