--- a/pages/evoluciona_a_raichu.html
+++ b/pages/evoluciona_a_raichu.html
@@ -26,16 +26,16 @@
             <li><a href="../index.html">Inicio</a></li>
             <li><a href="../pages/tienda.html">Tienda</a></li>
             <li><a href="../pages/sobre_nosotros.html">Sobre Nosotros</a></li>
-            <li><a href="../pages/informacion_de_contacto.html">Información de Contacto</a></li>
-            <li><a href="../pages/evoluciona_a_raichu.html" class="selected">Evoluciona a Raichu</a></li>
+            <li><a href="../pages/informacion_de_contacto.html">Informacion de Contacto</a></li>
+            <li><a href="../pages/evoluciona_a_raichu.html" class="selected">Evoluciona a raichu</a></li>
         </ul>
         </nav>
     </header>
-    <main class="main container_repuesto container margen-arriba3">
+    <main class="main container_repuesto container">
         <section>
-        <h1>¡VEO QUE TE DECIDISTE POR COMPRAR UNA PIEDRA TRUENO! ¡GENIAL, ESTÁS A UN SOLO PASO DE EVOLUCIONAR A RAICHU!</h1>
+        <h1>VEO QUE TE DECIDISTE POR COMPRAR UNA PIEDRA TRUENO! GENIAL, ESTAS A UN SOLO PASO DE EVOLUCIONAR A RAICHU!</h1>
         <h1> 
-            <a href="../pages/404.html" class="link-rojo">¡PARA EVOLUCIONAR A RAICHU ES TAN SIMPLE COMO SEGUIRNOS Y UNIRTE A NUESTRO PATREON! LUEGO REGISTRA TU EMAIL ACA ABAJO Y LISTO! ¡HAZ CLIC AQUÍ PARA UNIRTE A NUESTRO PATREON Y EVOLUCIONAR A RAICHU!</a>
+            <a href="../pages/404.html" class="link-rojo">PARA EVOLUCIONAR A RAICHU ES TAN SIMPLE COMO SEGUIRNOS Y UNIRTE A NUESTRO PATREON! CLICK AQUI PARA UNIRTE A NUESTRO PATREON Y EVOLUCIONAR A RAICHU!!</a>
         </h1>
         <div class="row">
             <div class="col-md-6">
@@ -44,30 +44,26 @@
         </a> 
     </div>
     <div class="col-md-6 pikachuraichugba">
-        <div class="container">
-            <form action="../pages/404.html"> 
-              <label for="email">Correo Electrónico:</label>
-              <input type="email" id="email" name="email" required>
-              <button type="submit">Confirmar</button>
-            </form>
-          </div>
+        <img src="../assets/img/PIKACHU IS EVOLVING_GBA.gif" alt="Pikachu_evolucionando_a_raichu_version_GBA"/>
+        <section>
+        </div>
     </div>
             <div class="row margen-arriba">
             <div class="col-md-6">
-        <h2> ¿Qué beneficios trae evolucionar a Raichu? Bastantes cosas, la verdad. Entre ellas, tendrás acceso a una nueva temática de la página, más productos de Raichu para comprar y otras sorpresas que es mejor que descubran por ustedes mismos.</h2>
+        <h2> Que beneficios trae evolucionar a raichu? Bastantes cosas la verdad, entre ellas tendrás acceso a una nueva temática de la página, más productos de raichu para comprar, y otras cosas que es mejor que lo averigüen por ustedes mismos!</h2>
     </div>
     <div class="col-md-6 pikachuraichuanime">
-        <img src="../assets/img/pikachu-is-evolving.gif" alt = "pikachu evolucionando en raichu" class="pikachu_is_evolving"/>
+        <img src="../assets/img/pikachu_is_evolving.gif" alt = "pikachu evolucionando en raichu" class="pikachu_is_evolving"/>
     </div>
     </div>
     <section>
         <div class="row">
     <div class="pikatv col-md-6">
-        <h3>¡SELECCIÓN DE LA PIKATV DEL DÍA!</h3>
+        <h3>SELECCION DE LA PIKATV DEL DIA!!</h3>
         <video src="../assets/videos/Pokémon-Opening-10-Diamante-y-perla-1.mp4" class="video2" alt="Pokémon-Opening-1-diamante-y-perla" controls></video>
     </div>
     <div class="col-md-6 pikachueevee">
-    <img src="../assets/img/pikachu-con-gafas.gif" alt="imagen animada de pikachu con gafas bailando" class="gif-animado-pikachu-eevee">
+    <img src="../assets/img/pikachu-y-eevee-escuchando-musica.gif" alt="imagen animada de pikachu y eeveee escuchando musica" class="gif-animado-pikachu-eevee">
 </div>  
 </div>
 </section>
@@ -79,10 +75,10 @@
                     <div class="col-md-4">
                         <a href="../pages/informacion_de_contacto.html" class="rayologo">
                             <img src="../assets/img/system-regular-117-bolt (1).gif" alt="logo_de_rayo_en_movimiento" />
-                            ¡¿Necesitas ayuda?! ¡Contacta al Soporte Eléctrico!
+                            Necesitas ayuda? Contacta al Soporte Electrico!!
                         </a>
                         <div>
-                            <p>Todos los derechos de autor reservados para sus respectivos autores. Esta página es sin ánimos de lucro y solamente estética.</p>
+                            <p>Todos los derechos de autor reservados para sus respectivos autores, esta pagina es sin animos de lucro, y solamente estetico.</p>
                         </div>
                         <a href="../pages/sobre_nosotros.html">Preguntas frecuentes</a> 
                     </div>
@@ -93,7 +89,7 @@
                             <li><a href="../pages/tienda.html">Tienda</a></li>
                             <li><a href="../pages/sobre_nosotros.html">Sobre Nosotros</a></li>
                             <li><a href="../pages/informacion_de_contacto.html">Informacion de Contacto</a></li>
-                            <li><a href="../pages/evoluciona_a_raichu.html">Evoluciona a Raichu</a></li>
+                            <li><a href="../pages/evoluciona_a_raichu.html">Evoluciona a raichu</a></li>
                         </ul>
                     </div>
                     <div class="col-md-4">
