--- a/pages/evoluciona_a_raichu.html
+++ b/pages/evoluciona_a_raichu.html
@@ -32,7 +32,7 @@
         </nav>
     </header>
     <main class="main container">
-        <section>
+        <section class="bienvenida">
         <h1>VEO QUE TE DECIDISTE POR COMPRAR UNA PIEDRA TRUENO! GENIAL, ESTAS A UN SOLO PASO DE EVOLUCIONAR A RAICHU!</h1>
         <h1> 
             <a href="../pages/404.html" class="link-rojo">PARA EVOLUCIONAR A RAICHU ES TAN SIMPLE COMO SEGUIRNOS Y UNIRTE A NUESTRO PATREON! CLICK AQUI PARA UNIRTE A NUESTRO PATREON Y EVOLUCIONAR A RAICHU!!</a>
@@ -44,7 +44,7 @@
         </a> 
     </div>
     <div class="col-md-6 pikachuraichugba">
-        <img src="../assets/img/PIKACHU-IS-EVOLVING-GBA.gif" alt="Pikachu_evolucionando_a_raichu_version_GBA"/>
+        <img src="../assets/img/PIKACHU-IS-EVOLVING-GBA.gif" alt="Pikachu evolucionando_a_raichu_version_GBA"/>
         <section>
         </div>
     </div>
