--- a/pages/evoluciona_a_raichu.html
+++ b/pages/evoluciona_a_raichu.html
@@ -63,7 +63,7 @@
         <video src="../assets/videos/Pokémon-Opening-10-Diamante-y-perla-1.mp4" class="video2" alt="Pokémon-Opening-1-diamante-y-perla" controls></video>
     </div>
     <div class="col-md-6 pikachueevee">
-    <img src="../assets/img/pikachu-y-eevee-escuchando-musica.gif" alt="imagen animada de pikachu y eeveee escuchando musica" class="gif-animado-pikachu-eevee">
+    <img src="../assets/img/pikachu-con-gafas.gif" alt="imagen animada de pikachu con gafas bailando" class="gif-animado-pikachu-eevee">
 </div>  
 </div>
 </section>
