--- a/pages/sobre_nosotros.html
+++ b/pages/sobre_nosotros.html
@@ -31,7 +31,7 @@
         </ul>
         </nav>
     </header>
-    <main class="main container">
+    <main class="main container margen-arriba">
         <section class="bienvenida">
         <h1>Quienes Somos?</h1>
         <p> Solo somos fanaticos de pokemon que sabe de la popularidad del hamster amarillo electrico mas conocido en el mundo (Si, pikachu es un hamster aunque no lo parezca),
